Enhanced TopItemsPanel with sales tabs; Tips are now showing correctly in GUI